# python-data-tools

./: .gitignore  README.md  fire_and_alcohol_study.ipynb  pyproject.toml
data/alcohol_data/: zipcodes_dict.csv
data/fire_events_data/: 1.csv
data/population_data/: tabela05.xls
data/result_data/: result.csv  result.xlsx
src/data_analysis_pack/: __init__.py  calculate.py
src/data_analysis_pack/io/: __init__.py  load.py  save.py
test/: test_calculate.py  test_load.py  test_save.py
zpicodes_and_powiats_generator/: zpicodes_pdf_to_csv.py
